--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,18 +1,1 @@
-
-    <script>
-      (function(d,t) {
-        var BASE_URL="https://digital.nextcos.de";
-        var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-        g.src=BASE_URL+"/packs/js/sdk.js";
-        g.defer = true;
-        g.async = true;
-        s.parentNode.insertBefore(g,s);
-        g.onload=function(){
-          window.chatwootSDK.run({
-            websiteToken: 'qEHHib35fb1TLM7rK8DBfCvs',
-            baseUrl: BASE_URL
-          })
-        }
-      })(document,"script");
-    </script>
-    
+<!-- Add content to _includes/head.html to include here -->
